@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.19
+    - layout is not a method
 
 0.18
     - added north(), east(), west() and south()
